
package it.water.user.service.rest.spring;

import it.water.core.api.model.PaginableResult;
import it.water.core.api.repository.query.Query;
import it.water.core.api.repository.query.QueryOrder;
import it.water.user.api.rest.spring.UserSpringRestApi;
import it.water.user.model.WaterUser;
import it.water.user.service.rest.UserRestControllerImpl;
import org.springframework.web.bind.annotation.RestController;


/**
 * @Generated by Water Generator
 * Rest Api Class for User entity. It just overrides method invoking super in order to let spring find web methods.
 */
@RestController
public class UserSpringRestControllerImpl extends UserRestControllerImpl implements UserSpringRestApi {
    @Override
    public WaterUser save(WaterUser entity) {
        return super.save(entity);
    }

    @Override
    public WaterUser update(WaterUser entity) {
        return super.update(entity);
    }

    @Override
    public void remove(long id) {
        super.remove(id);
    }

    @Override
    public WaterUser find(long id) {
        return super.find(id);
    }

    @Override
    public PaginableResult<WaterUser> findAll(Integer delta, Integer page, Query filter, QueryOrder order) {
        return super.findAll(delta, page, filter, order);
    }

    @Override
    public PaginableResult<WaterUser> findAll() {
        return super.findAll();
    }

    @Override
    public WaterUser register(WaterUser user) {
        return super.register(user);
    }

    @Override
    public void unregisterRequest() {
        super.unregisterRequest();
    }

    @Override
    public void activate(String email, String activationCode) {
        super.activate(email, activationCode);
    }

    @Override
    public void activate(long userId) {
        super.activate(userId);
    }

    @Override
    public void deactivate(long userId) {
        super.deactivate(userId);
    }

    @Override
    public void unregister(String email, String deletionCode) {
        super.unregister(email, deletionCode);
    }

    @Override
    public void passwordResetRequest(String email) {
        super.passwordResetRequest(email);
    }
}
